--- a/server/users/.model/private/HelloWorld/files/hello.html
+++ b/server/users/.model/private/HelloWorld/files/hello.html
@@ -5,7 +5,8 @@
 	<link type="text/css" rel="stylesheet" href="hello.css" />
 </head>
 <body>
-	<h1>Hello, world !</h1>
-	<p>How are you ?</p>
+    <input type="text" id="name" placeholder="Name" /><br />
+    <button id="read">Read name !</button>
+    <div id="print"></div>
 </body>
 </html>
